--- a/css/newtab.css
+++ b/css/newtab.css
@@ -97,7 +97,7 @@ html, body {
     left: 0;
     right: 0;
     margin: 0 auto;
-    background-color: #03A9F4;
+    background-color: #3F51B5;
     border-radius: 2px;
     transition: all 0.2s;
 }
