--- a/css/newtab.css
+++ b/css/newtab.css
@@ -35,6 +35,8 @@ html, body {
   overflow: auto !important;
 }
 
+
+
 .topbar {
     width: 100%;
     height: 50px;
@@ -85,6 +87,7 @@ html, body {
     background-size: 22px 22px;
     right: 45px;
     top: 50%;
+    opacity: 0.6;
     transform: translateY(-50%);
     cursor: pointer;
 }
@@ -98,6 +101,7 @@ html, body {
     background-size: 26px 26px;
     right: 80px;
     top: 50%;
+    opacity: 0.6;
     transform: translateY(-50%);
     cursor: pointer;
 }
@@ -195,10 +199,13 @@ html, body {
 }
 
 .bookmarks a {
-    width: 196px;
-    height: 128px;
+    width: 172px;
+    height: 96px;
     position: relative;
     float:left;
+    display:flex;
+    justify-content:center;
+    align-items:center;
     margin-right: 8px;
     margin-bottom: 8px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -208,18 +215,12 @@ html, body {
 .bookmarks a .icon {
     width: 24px;
     height: 24px;
+    margin-top: -16px;
     position: absolute;
-    left: 6px;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .bookmarks a .title {
     position: absolute;
-    left: 44px;
-    right: 0;
-    top: 50%;
     color: #ffffff;
-    transform: translateY(-50%);
+    margin-top: 20px;
 }
