--- a/css/tabbar.css
+++ b/css/tabbar.css
@@ -76,9 +76,8 @@
 
 .closeBtnImg {
     opacity: 0.6;
-    width: calc(100% - 2px);
-    height: calc(100% - 2px);
-    margin: 1px;
+    width: 100%;
+    height: 100%;
     background-image: url('../img/close.png');
     background-size: cover;
 }
