fixed window resizing

--- a/css/tabbar.css
+++ b/css/tabbar.css
@@ -11,11 +11,17 @@
 }
 
 .titlebar {
-    background-color: #eee;
     height: 32px;
     width: 100%;
-    -webkit-app-region: drag;
     z-index: 999;
+}
+
+.draggable {
+    -webkit-app-region: drag;
+    height: 29px;
+    width: 100%;
+    position: absolute;
+    top: 3px;
 }
 
 .border5 {
