--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,18 @@ body {
     color: #444;
     font-family: Roboto;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
     background-color: #eee;
 }
 
 .instances {
     height: calc(100vh - 28px);
+}
+
+.material-icons {
+    -webkit-user-select: none;
+    cursor: default;
 }
 
 .windowbutton {
