--- a/css/tabbar.css
+++ b/css/tabbar.css
@@ -74,21 +74,14 @@
     float: right;
     height: 16px;
     width: 16px;
-    margin-top: 9px;
+    opacity: 0.6;
+    margin-top: 6px;
     margin-right: 12px;
     font-family: Roboto;
     color: #444;
 }
 
-.closeBtnImg {
-    opacity: 0.6;
-    width: 100%;
-    height: 100%;
-    background-image: url('../img/close.png');
-    background-size: cover;
-}
-
-.closeBtnImg:hover {
+.closeBtn:hover {
     opacity: 1;
 }
 
@@ -105,14 +98,6 @@
 
 .addTabBtn:hover {
     opacity: 1;
-}
-
-.addTabImg {
-    width: calc(100% - 16px);
-    height: calc(100% - 16px);
-    margin: 8px;
-    background-image: url('../img/add.png');
-    background-size: cover;
 }
 
 .tabWindow {
