--- a/css/browser.css
+++ b/css/browser.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     width: 100%;
     height: 42px;
-    z-index: 1;
+    z-index: 9999;
     padding-top: 6px;
     -webkit-transition: background-color 0.2s;
     box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1);
@@ -37,6 +37,9 @@
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    height: 60px;
+    margin-top:48px;
 }
 
 .searchInput {
@@ -163,4 +166,16 @@
 .extBtn:hover {
     opacity: 1;
     transition: 0.2s all;
+}
+
+.searchBox i {
+    font-size: 18px; 
+    margin-top: 7px;
+    margin-left: 6px;
+    float: left;
+}
+
+.btn-icon {
+    margin-top: 8px; 
+    margin-left: 8px;
 }
