--- a/css/ripple.css
+++ b/css/ripple.css
@@ -15,11 +15,11 @@
     z-index: -2;
     position: absolute;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #444;
     user-select: none;
     pointer-events: none;
     padding: 0;
     margin: 0;
-    opacity: 0.4;
+    opacity: 0.3;
     transform: translate3d(-50%, -50%, 0);
 }
